# swipl_test

./: CMakeLists.txt
src/: swipl_test.cpp
